# Point-Risk

./: Requisitos.docx
Docker/: .env  docker-compose.yml
Docker/imagenes/mysql/: Dockerfile
Docker/imagenes/python/: requirements.txt
Docker/mysql/database/: auto.cnf  ca-key.pem  client-cert.pem  client-key.pem  ib_buffer_pool  server-cert.pem  server-req.pem
Docker/mysql/database/mysql/: db.MYI  engine_cost.ibd  event.MYI  innodb_index_stats.ibd  innodb_table_stats.ibd  proc.MYD  proc.MYI  (+3 more)
Docker/phinx/: lanzar.txt
Docker/python/: Dockerfile  crear.txt  pyproject.toml  requirements.txt
Docker/python/par/: app.py
DockerCompose/: .env  docker-compose.yml
DockerCompose/Docker/phinx/: Dockerfile
DockerCompose/Docker/python/: Dockerfile  pyproject.toml  requirements.txt
DockerCompose/Docker/python/par/: app.py
DockerCompose/Docker/python/par/static/css/: background.css  login.css  registration.css
DockerCompose/Docker/python/par/static/js/: sidebar.js
DockerCompose/Docker/python/par/templates/: conexion.html  head.html  registerhead.html
DockerCompose/Docker/python/par/templates/admin/: admin.html
DockerCompose/Docker/python/par/templates/noLog/: forgot.html  login.html  registration.html
DockerCompose/Docker/python/par/templates/profile/: changePass.html
DockerCompose/Docker/python/par/templates/risks/: riskCreate.html  riskIndex.html  risksSearch.html
DockerCompose/Docker/python/par/templates/tables/: tableEdit.html  tablePDF.html  tablesIndex.html
migrations/: phinx.yml
migrations/db/migrations/: 20221103192139_first.php
(+153 files in other folders)
